# binary-addition-machine

./: README.md  pyproject.toml
.github/workflows/: python-tests.yml
py_addition_machine/: main.py
tests/: test_py_addition_machine.py
