[tool.poetry]
name = "binary-addition-machine"
version = "0.1.0"
description = ""
authors = ["Sten Remmelg <sten.remmelg@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
pytest = "^6.2.1"
black = "^20.8b1"
hypothesis = "^5.43.3"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
